# tracerate

./: Cargo.toml  LICENSE  README.md  index.html  pyproject.toml  renovate.json
.circleci/: config.yml
.github/workflows/: build-and-lint.yml  publish.yml  release.yml
src/: bufferbloat.rs  info.rs  main.rs  output.rs  regional.rs  tester.rs  util.rs  verdict.rs
tracerate/: __init__.py  bufferbloat.py  cli.py  info.py  regional.py  tester.py  verdict.py
