[package]
name = "tracerate"
version = "1.1.0"
edition = "2021"
description = "A no-nonsense CLI internet speed tester"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "http2", "rustls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.18"
colored = "2"
rand = "0.10"
socket2 = "0.6"
futures = "0.3"
