[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracerate"
version = "1.0.0"
description = "A no-nonsense CLI internet speed tester"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx",
    "typer",
    "rich",
]

[project.scripts]
tracerate = "tracerate.cli:app"